<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/multiLineTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/thePrep"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:text="@string/difficulty"
            android:textAlignment="textEnd"/>
    </LinearLayout>


</LinearLayout>