<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hci.team.ichef.Recipe">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/recipeTxt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/recipe"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="center"
            app:srcCompat="@drawable/salmon_pasta"
            android:contentDescription="@string/salads"/>

        <Button
            android:id="@+id/btnTest"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startIchef"
            android:layout_alignParentBottom="true"
            android:onClick="onClick"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</android.support.design.widget.CoordinatorLayout>